--- a/app/src/main/res/layout/activity_employee_dashboard.xml
+++ b/app/src/main/res/layout/activity_employee_dashboard.xml
@@ -81,4 +81,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/rectangle_2" />
 
+    <Button
+        android:id="@+id/LogoutButton"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Log Out"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rectangle_2"
+         />
 </androidx.constraintlayout.widget.ConstraintLayout>
