--- a/app/src/main/res/layout/activity_employee_login.xml
+++ b/app/src/main/res/layout/activity_employee_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -48,11 +47,11 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="392dp"
         android:inputType="textEmailAddress"
-        app:layout_constraintTop_toBottomOf="@id/EmployeeEmailTextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/EmployeeEmailTextView" />
 
     <TextView
         android:id="@+id/EmployeePasswordTextView"
@@ -100,4 +99,21 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EmployeePasswordEditText" />
+
+    <TextView
+        android:id="@+id/SignUpTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No Account?SIGN UP now"
+        android:textAlignment="center"
+        android:textColor="@color/purple_500"
+        android:textSize="21sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/LoginEmployeeButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
